Attempt to appease CodeQL